# Splash-3

./: README.md  gesalous_README.md  gesalous_experiments.txt
codes/: Makefile.config
codes/ges_macros/: pthread.m4.stougie
ges_locks/: CMakeLists.txt
ges_locks/include/: ges_barrier.h  ges_lock.h  lock.h
ges_locks/src/: ges_barrier.c  mcs_lock.c  spin_lock.c  ticket_lock.c
ges_locks/tests/: counter_test.c
results/: lu.py  mcs_locks_lu.txt  mcs_locks_lu_new.txt  mcs_locks_water-nsquared.txt  mcs_locks_water-nsquared_new.txt  spin_locks_lu.txt  spin_locks_lu_new.txt  spin_locks_water-nsquared.txt  spin_locks_water-nsquared_new.txt  water_nsquared.py
